discussion/kv_engine/152563/152563_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45221: Use from_chars in collection id conversion FORCE clang-analyser fail

Fix a "todo" now that the compilers are capable of std::from_chars

Change-Id: Ib54446d40de1fa0c923178e81cc721b2239ed542

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-04-30 16:38:06.000000000
Message: 
Patch Set 3: Published edit on patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-30 17:00:12.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10195/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35458/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(62): error C3861: "__builtin_alloca": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35458/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30320/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30320/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8663/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/couch-kvstore/couch-kvstore.cc b/engines/ep/src/couch-kvstore/couch-kvstore.cc
index 992ccd9f0..00e1b73d8 100644
--- a/engines/ep/src/couch-kvstore/couch-kvstore.cc
+++ b/engines/ep/src/couch-kvstore/couch-kvstore.cc
@@ -53,7 +53,7 @@ public:
 };
 
 void test1() {
-  SomeClass *c = new SomeClass;
+  auto *c = new SomeClass;
   delete c;
   c-&gt;f(); // warn: use after free
 }
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8663/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:56:3: warning: use auto when initializing with new to avoid duplicating the type name [modernize-use-auto]
  SomeClass *c = new SomeClass;
  ^~~~~~~~~
  auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:56:3: note: FIX-IT applied suggested code changes
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/couch-kvstore/couch-kvstore.cc b/engines/ep/src/couch-kvstore/couch-kvstore.cc
index 992ccd9f0..00e1b73d8 100644
--- a/engines/ep/src/couch-kvstore/couch-kvstore.cc
+++ b/engines/ep/src/couch-kvstore/couch-kvstore.cc
@@ -53,7 +53,7 @@ public:
 };
 
 void test1() {
-  SomeClass *c = new SomeClass;
+  auto *c = new SomeClass;
   delete c;
   c-&gt;f(); // warn: use after free
 }
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8663/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9269/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9269/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10588/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10588/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10338/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10338/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18141/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18141/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7212/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
